--- a/cats.html
+++ b/cats.html
@@ -229,7 +229,7 @@
       </nav>
     </div>
     <div id="no-mobile">
-      <span>Please reduce the big screen size!!</span>
+      <span>Please reduce the screen size.</span>
     </div>
   </body>
 </html>
