--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </form>
     </div>
     <div id="no-mobile">
-      <span>Please reduce the big screen size!!</span>
+      <span>Please reduce the screen size.</span>
     </div>
   </body>
 </html>
