--- a/cats.html
+++ b/cats.html
@@ -228,6 +228,9 @@
         </ul>
       </nav>
     </div>
+    <div class="screen" id="splash-screen">
+      <i class="fas fa-paw"></i>
+    </div>
     <div id="no-mobile">
       <span>Please reduce the screen size.</span>
     </div>
